[package]
name = "raytracing"
version = "0.1.0"
authors = ["Armavica <virgile.andreani@anbuco.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
ndarray = "0.12.1"
image = "0.22.0"
num-traits = "0.2.8"
rand_distr = "0.2.1"
clap = "2.33.0"
